# PhoneAgent

./: .gitignore  .pre-commit-config.yaml  README.md  agent.py  config.yaml  main.py  pyproject.toml  tools.py
passpilot_agent/: .env.local  agent.py  prompt.j2  prompt.py  tools.py  vision.py
passpilot_agent/tools/: __init__.py  navigation.py
passpilot_agent/tools/vision/: vision.py
phone_agent/: .env.local  agent.py  create_trello_board_and_ticket.evalset.json  forward_email_to_father.evalset.json  prompt.j2  send_<3_to_gf_messenger.evalset.json
phone_agent/prompts/: agent.j2  vision.j2
phone_agent/tools/: loop.py  navigation.py  vision.py  workflow.py
phone_agent/tools/vision/: vision.py
